[gd_scene load_steps=46 format=2]

[ext_resource path="res://Sprites/Individual Sprites/adventurer-idle-02.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-idle-00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-idle-03.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-idle-01.png" type="Texture" id=4]
[ext_resource path="res://Entity/Player/player.gd" type="Script" id=5]
[ext_resource path="res://Entity/Player/shake_camera_2D.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-jump-00.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-jump-02.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-jump-01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-jump-03.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-fall-00.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-fall-01.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-crnr-clmb-04.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-crnr-clmb-01.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-crnr-clmb-00.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-crnr-clmb-02.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-crnr-clmb-03.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-wall-slide-00.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-wall-slide-01.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-03.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-04.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-01.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-02.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-05.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-run-00.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-00.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-01.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-04.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-05.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-02.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-06.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Individual Sprites/adventurer-die-03.png" type="Texture" id=32]
[ext_resource path="res://Audio/impactSoft_heavy_004.ogg" type="AudioStream" id=33]
[ext_resource path="res://Audio/dropLeather.ogg" type="AudioStream" id=34]
[ext_resource path="res://Audio/footstep01.ogg" type="AudioStream" id=35]
[ext_resource path="res://Audio/footstep00.ogg" type="AudioStream" id=39]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.57295
height = 18.5475

[sub_resource type="Animation" id=2]
resource_name = "Climb"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 31 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.207843, 0.0745098, 0.0745098, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("runSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 39 )
}, {
"end_offset": 0.000640099,
"start_offset": 0.0,
"stream": ExtResource( 35 )
} ],
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=8]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotatable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotatable/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="OccluderPolygon2D" id=9]
cull_mode = 2
polygon = PoolVector2Array( 4.6327, -28.9994, 1.21373, -29.8913, -6.36746, -30.7832, -8.15128, -26.175, -10.9756, -21.1209, -12.3135, -13.9856, -12.0162, 10.9877, -10.381, 24.515, -10.0837, 27.9339, -6.51611, 27.6366, -1.90794, 29.2718, 5.2273, 28.6772, 11.6193, 27.1907, 11.6193, 27.1907, 9.38953, 23.1771, 11.322, 18.2716, 11.0247, 6.5282, 15.6329, 5.93359, 15.7815, -1.79625, 13.8491, -6.25578, 11.4706, -12.2018, 10.1328, -23.7966 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 2 )
anims/Die = SubResource( 3 )
anims/Fall = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )
"anims/Wall Slide" = SubResource( 8 )

[node name="Rotatable" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rotatable"]
position = Vector2( 0, -6.82869 )
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )
offset = Vector2( -3, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Rotatable"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Camera" type="Node2D" parent="."]

[node name="ShakeCamera2D" type="Camera2D" parent="Camera"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
script = ExtResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 9 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 33 )
volume_db = 1.0
pitch_scale = 1.39
attenuation = 3.73213

[node name="dashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 34 )

[node name="runSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 39 )
volume_db = -25.778
pitch_scale = 0.84
autoplay = true
attenuation = 1.18921
